<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"

    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/big_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        custom:donut_finished_color="@color/progressRed"
        custom:donut_progress="74"
        custom:donut_text_color="#000000"
        custom:donut_unfinished_color="@color/progressBlue"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.237"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.83" />

    <com.github.lzyzsd.circleprogress.CircleProgress
        android:id="@+id/total_progress"
        android:layout_width="212dp"
        android:layout_height="209dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        custom:circle_finished_color="@color/progressRed"
        custom:circle_progress="72"
        custom:circle_text_color="#000000"
        custom:circle_text_size="35dp"
        custom:circle_unfinished_color="@color/progressBlue"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.497"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.029" />

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/self_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        custom:donut_finished_color="@color/progressRed"
        custom:donut_progress="13.7"
        custom:donut_text_color="#000000"
        custom:donut_unfinished_color="@color/progressBlue"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.754"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.83" />

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/entertainment_spend"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        custom:donut_finished_color="@color/progressRed"
        custom:donut_progress="30"
        custom:donut_text_color="#000000"
        custom:donut_unfinished_color="@color/progressBlue"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.498"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.564" />

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/regular_spend"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        custom:donut_finished_color="@color/progressRed"
        custom:donut_max="100"
        custom:donut_progress="50"
        custom:donut_text_color="#000000"
        custom:donut_unfinished_color="@color/progressBlue"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.041"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.557" />

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/gifts_spend"
        android:layout_width="99dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        custom:donut_finished_color="@color/progressRed"
        custom:donut_progress="23"
        custom:donut_text_color="#000000"
        custom:donut_unfinished_color="@color/progressBlue"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.939"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.564" />

    <ImageButton
        android:id="@+id/self_spend_btn"
        android:layout_width="109dp"
        android:layout_height="114dp"
        android:layout_alignStart="@+id/self_spend"
        android:layout_alignLeft="@+id/self_spend"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:onClick="onClickCategory"
        android:scaleType="fitCenter"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.762"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.84000003"
        custom:srcCompat="@drawable/trans_btn" />

    <ImageButton
        android:id="@+id/big_spend_btn"
        android:layout_width="116dp"
        android:layout_height="109dp"
        android:layout_alignStart="@+id/big_spend"
        android:layout_alignLeft="@+id/big_spend"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:onClick="onClickCategory"
        android:scaleType="fitCenter"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.223"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.8350000"
        custom:srcCompat="@drawable/trans_btn" />

    <ImageButton
        android:id="@+id/regular_spend_btn"
        android:layout_width="115dp"
        android:layout_height="108dp"
        android:layout_alignStart="@+id/regular_spend"
        android:layout_alignLeft="@+id/regular_spend"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:onClick="onClickCategory"
        android:scaleType="fitCenter"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.015"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.565"
        custom:srcCompat="@drawable/trans_btn" />

    <ImageButton
        android:id="@+id/total_progress_btn"
        android:layout_width="259dp"
        android:layout_height="256dp"
        android:layout_alignStart="@+id/total_progress"
        android:layout_alignLeft="@+id/total_progress"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClickTotal"
        android:scaleType="fitCenter"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.035"
        custom:srcCompat="@drawable/trans_btn" />

    <ImageButton
        android:id="@+id/gifts_spend_btn"
        android:layout_width="108dp"
        android:layout_height="118dp"
        android:layout_alignStart="@+id/gifts_spend"
        android:layout_alignLeft="@+id/gifts_spend"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:onClick="onClickCategory"
        android:scaleType="fitCenter"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.955"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.567"
        custom:srcCompat="@drawable/trans_btn" />

    <ImageButton
        android:id="@+id/entertainment_spend_btn"
        android:layout_width="110dp"
        android:layout_height="118dp"
        android:layout_alignStart="@+id/entertainment_spend"
        android:layout_alignLeft="@+id/entertainment_spend"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:onClick="onClickCategory"
        android:scaleType="fitCenter"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.499"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.5665"
        custom:srcCompat="@drawable/trans_btn" />

    <TextView
        android:id="@+id/big_lab"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:text="@string/big"
        android:textColor="@color/progressBlue"
        android:textStyle="bold"
        android:typeface="serif"
        custom:fontFamily="cursive"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.22"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/big_spend"
        custom:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/self_lab"
        android:layout_width="92dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:text="@string/self"
        android:textColor="@color/progressBlue"
        android:textStyle="bold"
        android:typeface="serif"
        custom:fontFamily="cursive"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.42"
        custom:layout_constraintStart_toEndOf="@+id/big_lab"
        custom:layout_constraintTop_toBottomOf="@+id/self_spend"
        custom:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/regular_lab"
        android:layout_width="105dp"
        android:layout_height="23dp"
        android:text="@string/regular"
        android:textColor="@color/progressBlue"
        android:textStyle="bold"
        android:typeface="serif"
        custom:fontFamily="cursive"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.081"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/regular_spend"
        custom:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/entertainment_lab"
        android:layout_width="102dp"
        android:layout_height="25dp"
        android:text="@string/entertainment"
        android:textColor="@color/progressBlue"
        android:textStyle="bold"
        android:typeface="serif"
        custom:fontFamily="cursive"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.05"
        custom:layout_constraintStart_toEndOf="@+id/regular_lab"
        custom:layout_constraintTop_toBottomOf="@+id/entertainment_spend"
        custom:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/button"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:background="@color/button"
        android:onClick="onClickIncome"
        android:text="@string/income"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="@color/button"
        android:onClick="onClickExpense"
        android:text="@string/expense"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/gifts_lab"
        android:layout_width="86dp"
        android:layout_height="25dp"
        android:text="@string/gifts"
        android:textColor="@color/progressBlue"
        android:textStyle="bold"
        android:typeface="serif"
        custom:fontFamily="cursive"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.808"
        custom:layout_constraintStart_toEndOf="@+id/entertainment_lab"
        custom:layout_constraintTop_toBottomOf="@+id/gifts_spend"
        custom:layout_constraintVertical_bias="0.04" />

    <ImageButton
        android:id="@+id/main_calendar_2"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:onClick="setDate2"
        android:tint="@color/colorPrimaryDark"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.565"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.001"
        custom:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <TextView
        android:id="@+id/calendar_text_1"
        android:layout_width="109dp"
        android:layout_height="24dp"
        android:text="TextView"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.0"
        custom:layout_constraintStart_toEndOf="@+id/main_calendar_1"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.015" />

    <ImageButton
        android:id="@+id/main_calendar_1"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:onClick="setDate1"
        android:tint="@color/colorPrimaryDark"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.176"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.001"
        custom:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <TextView
        android:id="@+id/calendar_text_2"
        android:layout_width="109dp"
        android:layout_height="24dp"
        android:text="TextView"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.0"
        custom:layout_constraintStart_toEndOf="@+id/main_calendar_2"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.015" />

    <ImageButton
        android:id="@+id/info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="onClickInfo"
        android:tint="@color/colorPrimary"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.013"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.004"
        custom:srcCompat="@android:drawable/ic_dialog_info" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="47dp"
        android:layout_height="44dp"
        android:background="@android:color/transparent"
        android:onClick="onClickRep"
        android:scaleType="fitCenter"
        android:tint="@color/colorPrimaryDark"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="1.0"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.0"
        custom:srcCompat="@android:drawable/ic_menu_set_as" />

</android.support.constraint.ConstraintLayout>